--- a/package.json
+++ b/package.json
@@ -20,19 +20,27 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.0",
     "@types/multer": "^1.4.12",
+    "handlebars": "^4.7.8",
     "mongoose": "^8.14.0",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.5",
+    "pg": "^8.16.3",
     "qrcode.react": "^4.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.25"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
