--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "@nestjs/websockets": "^11.1.0",
     "@types/multer": "^1.4.13",
     "@types/sharp": "^0.31.1",
+    "archiver": "^7.0.1",
     "argon2": "^0.43.1",
     "cache-manager": "^7.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "crypto-js": "^4.2.0",
+    "file-type": "^21.1.0",
     "handlebars": "^4.7.8",
     "image-size": "^2.0.2",
     "mongoose": "^8.14.0",
@@ -68,6 +70,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/archiver": "^7.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
